<resources>
    <string name="app_name">GDPR SDK Android Demo</string>
    <string name="show_privacy_settings">Open Privacy Settings</string>
    <string name="current_consent_string">Current Consent String</string>
    <string name="is_subject_to_gdpr">This app is now subject to GDPR</string>
    <string name="is_not_subject_to_gdpr">This app is not subject to GDPR</string>
    <string name="hello_world">Hello World App!</string>
    <string name="toggle_on">Set Subject to GDPR</string>
    <string name="toggle_off">Set Not Subject To GDPR</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="copied_to_clipboard">Consent String copied to clipboard...</string>
    <string name="consent_string_not_set">Not Set</string>
    <string name="clear_all">Wipe Privacy Settings</string>
    <string name="clear_descr">Wiping privacy settings will remove keys \"IABConsent_SubjectToGDPR\" and \"IABConsent_ConsentString\" from this apps Default Shared Preferences</string>
    <string name="settings_cleared">GDPR Settings wiped...</string>

</resources>
