<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityKotlin"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="17pt"/>

    <TextView
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:id="@+id/subject_to_gdpr"
        android:text="@string/is_subject_to_gdpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ToggleButton
        android:onClick="onToggleGDPR"
        android:id="@+id/toggle_gdpr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOn="@string/toggle_off"
        android:textOff="@string/toggle_on"
        />

    <Button
        android:onClick="onPrivacySettings"
        android:id="@+id/show_privacy_settings"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/show_privacy_settings"/>

    <TextView
        android:textAlignment="center"
        android:text="@string/current_consent_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textAlignment="center"
        android:textIsSelectable="true"
        android:id="@+id/consent_string"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:onClick="onCopyToClipboard"
        android:id="@+id/copy_to_clipboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copy_to_clipboard"/>

    <Button
        android:layout_marginTop="16dp"
        android:onClick="onClearSettings"
        android:id="@+id/clear_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_all"/>

    <TextView
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear_descr"/>

</LinearLayout>